style: Fix bug with issue board cards overlappning header
Former-commit-id: 92ed93f18f2a81d6721050287cde392ace0c5e97

--- a/packages/web-app/src/style/_navigation.scss
+++ b/packages/web-app/src/style/_navigation.scss
@@ -1,7 +1,7 @@
 //Styling for top nav
 
 .header {
-  @apply border-b border-gray-500 bg-gray-100 fixed left-0 top-0 w-full h-16;
+  @apply border-b border-gray-500 bg-gray-100 fixed left-0 top-0 w-full h-16 z-10;
 }
 
 .header-link {
